# 1brc_cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.cpp  benchmark.sh  calculations.cpp  calculations.h  channel.h  create-sample.c  create-samples.sh  create_measurements.py  fread-chunks.c  hashmap.c  linear-search.c  loop-unrolling.c  main  main.c  main.cpp  main.go  mmap.c  parallelize.c  parse-double.c  v3.c
charts/: create-chart-speedup.py  create-charts-absolute.py  performance.csv  pivot.csv  runtimes.csv  speedup.csv
perf/: bench.txt
tests/: CMakeLists.txt  double-parse-tests.cpp
